--- a/news.html
+++ b/news.html
@@ -92,7 +92,7 @@
                     <li class="nav-item dropdown relative">
                         <a class="nav-link active" href="about-us.html">About Us</a>
                     </li>
-    
+                    <h1>hello world</h1>
                     <!-- Login/Signup Buttons beside About Us -->
                     
                 </ul>
