--- a/news.html
+++ b/news.html
@@ -39,6 +39,7 @@
                 </a>
             </div>
     
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis nisi quia magnam ad enim, blanditiis officia reprehenderit expedita commodi voluptatum, vitae quidem corporis consequuntur voluptas, optio dignissimos libero consequatur provident.
             <!-- Navbar Links -->
             <nav class="navbar" id="nav">
                 <ul class="d-flex align-items-center space-x-4 list-unstyled mb-0">
@@ -54,6 +55,7 @@
                             <a href="#">Designer Team</a>
                         </div>
                     </li>
+                    <h1>lorem65</h1>
                     <li class="nav-item dropdown relative">
                         <a class="nav-link" href="services.html">Product</a>
                         <div class="dropdown-content">
